--- a/PokemonAPI/FrontEnd/pokemonAPI/src/app/footer/footer.components.css
+++ b/PokemonAPI/FrontEnd/pokemonAPI/src/app/footer/footer.components.css
@@ -3,4 +3,8 @@
     bottom: 0px;
     height: 60px;
     width: 100%;
+    background-color: #3E3C3A;
+    text-align: center;
+    color: white;
+    font-size: 20px;
 }
