--- a/PokemonAPI/FrontEnd/pokemonAPI/src/app/header/header.component.css
+++ b/PokemonAPI/FrontEnd/pokemonAPI/src/app/header/header.component.css
@@ -58,7 +58,7 @@ h2{
   width: 195px;
   height: 76px;
   line-height: 78px;
-  font-size: 12px;
+  font-size: 16px;
   font-family: 'Bebas Neue', sans-serif;
   background: linear-gradient(45deg, transparent 5%, #FF013C 5%);
   border: 0;
@@ -80,7 +80,7 @@ h2{
   --slice-4: inset(40% -6px 43% 0);
   --slice-5: inset(80% -6px 5% 0);
   
-  content: 'LISTADO DE TODOS LOS POKEMON';
+  content: 'HAZTE CON TODOS';
   display: block;
   position: absolute;
   top: 0;
@@ -144,10 +144,10 @@ h2{
   }
 }
 
-@media (min-width: 815px) {
+@media (min-width: 800px) {
   .button-49,
   .button-49:after {
-    width: 315px;
+    width: 300px;
     height: 86px;
     line-height: 88px;
   }
